--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,14 @@
 *.log
 *.pot
 *.pyc
-__pycache__/
-local_settings.py
+*~
+__pycache__
+myvenv
 db.sqlite3
+/static
+.DS_Store
+local_settings.py
 media
-
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
